update agm page to fix links

--- a/static/2020AGM/index.html
+++ b/static/2020AGM/index.html
@@ -7,20 +7,20 @@
 			<h1>2020 AGM</h1>
 		<hr />
 			<p>Luscinia Enterprises Assn. AGM Records:</p>
-			<a href="./Minutes/2020_AGM_Agenda.pdf">Meeting Agenda</a><br />
-			<a href="./Minutes/2020_AGM_Minutes_signed.pdf">Signed Meeting Minutes</a><br />
+			<a href="/2020AGM/Minutes/2020_AGM_Agenda.pdf">Meeting Agenda</a><br />
+			<a href="/2020AGM/Minutes/2020_AGM_Minutes_signed.pdf">Signed Meeting Minutes</a><br />
 		<hr />
 			<p>Voting Records</p>
-			<a href="./Voting_Records/2020_AGM_Voting_Record_Adam_Garay_signed.pdf">Adam Garay (Vice-Chair of the Board)</a><br />
-			<a href="./Voting_Records/2020_AGM_Voting_Record_Alexa_Gogoescu_signed.pdf">Alexa Gogoescu (Class A Member)</a><br />
-			<a href="./Voting_Records/2020_AGM_Voting_Record_Andrew_Huang_signed.pdf">Andrew Huang (Class A Member)</a><br />
-			<a href="./Voting_Records/2020_AGM_Voting_Record_Brandon_Krezeski_signed.pdf">Brandon Krezeski (Secretary)</a><br />
-			<a href="./Voting_Records/2020_AGM_Voting_Record_Jack_McColl_signed.pdf">Jack McColl (Director)</a><br />
-			<a href="./Voting_Records/2020_AGM_Voting_Record_Jacob_Chun_signed.pdf">Jacob Chun (Treasurer)</a><br />
-			<a href="./Voting_Records/2020_AGM_Voting_Record_Jerry_Xu_signed.pdf">Jerry Xu (Class A Member)</a><br />
-			<a href="./Voting_Records/2020_AGM_Voting_Record_Milan_Bumbulovic_signed.pdf">Milan Bumbulovic (President)</a><br />
-			<a href="./Voting_Records/2020_AGM_Voting_Record_Richard_Zhang_signed.pdf">Richard Zhang (Class A Member)</a><br />
-			<a href="./Voting_Records/2020_AGM_Voting_Record_Varun_Patel_signed.pdf">Varun Patel (Chair of the Board)</a><br />
+			<a href="/2020AGM/Voting_Records/2020_AGM_Voting_Record_Adam_Garay_signed.pdf">Adam Garay (Vice-Chair of the Board)</a><br />
+			<a href="/2020AGM/Voting_Records/2020_AGM_Voting_Record_Alexa_Gogoescu_signed.pdf">Alexa Gogoescu (Class A Member)</a><br />
+			<a href="/2020AGM/Voting_Records/2020_AGM_Voting_Record_Andrew_Huang_signed.pdf">Andrew Huang (Class A Member)</a><br />
+			<a href="/2020AGM/Voting_Records/2020_AGM_Voting_Record_Brandon_Krezeski_signed.pdf">Brandon Krezeski (Secretary)</a><br />
+			<a href="/2020AGM/Voting_Records/2020_AGM_Voting_Record_Jack_McColl_signed.pdf">Jack McColl (Director)</a><br />
+			<a href="/2020AGM/Voting_Records/2020_AGM_Voting_Record_Jacob_Chun_signed.pdf">Jacob Chun (Treasurer)</a><br />
+			<a href="/2020AGM/Voting_Records/2020_AGM_Voting_Record_Jerry_Xu_signed.pdf">Jerry Xu (Class A Member)</a><br />
+			<a href="/2020AGM/Voting_Records/2020_AGM_Voting_Record_Milan_Bumbulovic_signed.pdf">Milan Bumbulovic (President)</a><br />
+			<a href="/2020AGM/Voting_Records/2020_AGM_Voting_Record_Richard_Zhang_signed.pdf">Richard Zhang (Class A Member)</a><br />
+			<a href="/2020AGM/Voting_Records/2020_AGM_Voting_Record_Varun_Patel_signed.pdf">Varun Patel (Chair of the Board)</a><br />
 		<hr />
 			<p>For any inquiries in relation to the provided information, please contact <a href="mailto:support@luscinia.ca">support@luscinia.ca</a>.</p>
 	</body>
