--- a/static/hiringredirect/index.html
+++ b/static/hiringredirect/index.html
@@ -2,11 +2,9 @@
 <html>
 	<head>
 		<title>Luscinia Job Application</title>
-		<meta http-equiv="refresh" content="1; URL=https://forms.office.com/Pages/ResponsePage.aspx?id=-Z-QtzhLYUCDH7NeXQG01lYYGr3gax9FtMy5HwdFZVlUNlJUWUJBSUZYTkNaNjFRQ0JNUTQ5QTdSMC4u" />
+		<meta http-equiv="refresh" content="1; URL=https://forms.office.com/r/FVZDJN0uFZ" />
 	</head>
 	<body>
-		<p>If you are not redirected in 5 seconds, click  <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=-Z-QtzhLYUCDH7NeXQG01lYYGr3gax9FtMy5HwdFZVlUNlJUWUJBSUZYTkNaNjFRQ0JNUTQ5QTdSMC4u">here</a>.</p>
-		<p> or scan the QR code below to access the application from another device.</p>
-		<img height="200" width="200" src="/images/lea-jobs-app.png" />
+		<p>If you are not redirected in 5 seconds, click  <a href="https://forms.office.com/r/FVZDJN0uFZ">here</a>.</p>
 	</body>
 </html>
