update voting url

--- a/static/votingredirect/index.html
+++ b/static/votingredirect/index.html
@@ -2,9 +2,9 @@
 <html>
 	<head>
 		<title>Luscinia Online Voting</title>
-		<meta http-equiv="refresh" content="1; URL=https://forms.office.com/Pages/ResponsePage.aspx?id=-Z-QtzhLYUCDH7NeXQG01lYYGr3gax9FtMy5HwdFZVlURjA2QzkzUlNPQVdINUlVME82WDdENUZITS4u" />
+		<meta http-equiv="refresh" content="1; URL=https://forms.office.com/r/daqTGC04f8" />
 	</head>
 	<body>
-		<p>If you are not redirected in 5 seconds, click  <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=-Z-QtzhLYUCDH7NeXQG01lYYGr3gax9FtMy5HwdFZVlURjA2QzkzUlNPQVdINUlVME82WDdENUZITS4u">here</a>.</p>
+		<p>If you are not redirected in 5 seconds, click  <a href="https://forms.office.com/r/daqTGC04f8">here</a>.</p>
 		</body>
 </html>
